--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.5</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>dasniko</groupId>
     <artifactId>keycloak-bookshop-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -18,6 +25,7 @@
         <module>shop</module>
         <module>pim</module>
         <module>cart</module>
+        <module>checkout</module>
     </modules>
 
 </project>
