call msgbroker from checkout with oauth2 enhanced resttemplate

--- a/checkout/src/main/resources/application.properties
+++ b/checkout/src/main/resources/application.properties
@@ -5,3 +5,8 @@ keycloak.auth-server-url=http://localhost:8080/auth/
 keycloak.resource=checkout
 keycloak.credentials.secret=48d6698a-c787-427b-9aa3-80a3078d4568
 keycloak.principal-attribute=preferred_username
+
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.keycloak.client-id=${keycloak.resource}
+spring.security.oauth2.client.registration.keycloak.client-secret=${keycloak.credentials.secret}
+spring.security.oauth2.client.provider.keycloak.token-uri=${keycloak.auth-server-url}realms/${keycloak.realm}/protocol/openid-connect/token
