--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -7,6 +7,9 @@ quarkus.oidc.credentials.client-secret.value=08d171bf-ba03-44db-8279-f678d68021d
 #quarkus.http.auth.permission.authenticated.paths=/*
 #quarkus.http.auth.permission.authenticated.policy=authenticated
 
+quarkus.oidc.logout.path=/logout
+quarkus.oidc.logout.post-logout-path=/index.html
+
 quarkus.oidc-client.auth-server-url=${quarkus.oidc.auth-server-url}
 quarkus.oidc-client.client-id=${quarkus.oidc.client-id}
 quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.client-secret.value}
